--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -52,3 +52,95 @@
 .itemControl {
   margin-right: 4px;
 }
+
+.totals {
+  display: flex;
+  flex-direction: column;
+}
+
+.total {
+  font-weight: bold;
+}
+
+.selectControl {
+  display: flex;
+  column-gap: 10px;
+}
+
+.selectControl > button {
+  padding: 2px;
+}
+
+.selectControl > button:hover {
+  cursor: pointer;
+}
+
+.itemCheckboxContainer {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.itemCheckboxContainer input {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border-radius: 5px;
+  background-color: var(--gb-dm-bg4);
+}
+
+.itemCheckboxContainer input ~ .checkmark {
+  background-color: var(--gb-dm-bg2);
+}
+
+.itemCheckboxContainer input:checked ~ .checkmark {
+  background-color: var(--gb-dm-dark-blue);
+}
+
+.itemCheckboxContainer input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.itemCheckboxContainer:hover input ~ .checkmark {
+  background-color: var(--gb-dm-dark-gray);
+}
+
+.itemCheckboxContainer:hover input:checked ~ .checkmark {
+  background-color: var(--gb-dm-dark-purple);
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.itemCheckboxContainer .checkmark:after {
+  left: 7px;
+  top: 3px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
