--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,7 @@
   flex-direction: column;
   width: 50%;
   row-gap: 10px;
+  max-height: 85vh;
 }
 
 .categories {
@@ -21,12 +22,16 @@
   column-gap: 20px;
   row-gap: 20px;
   margin: 0 10px;
+  height: 100%;
+  overflow-y: scroll;
+  background-color: var(--gb-dm-bg1);
 }
 
 .categoryContainer {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
+  width: 100%;
 }
 
 .statisticsContainer {
@@ -46,7 +51,17 @@
   display: flex;
   flex-direction: column;
   row-gap: 2px;
-  width: 350px;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  height: 30px;
+  padding-left: 4px;
+}
+
+.items .item:nth-child(odd) {
+  background-color: var(--gb-dm-bg2);
 }
 
 .itemControl {
@@ -108,7 +123,7 @@
 }
 
 .itemCheckboxContainer input ~ .checkmark {
-  background-color: var(--gb-dm-bg2);
+  background-color: var(--gb-dm-bg0-hard);
 }
 
 .itemCheckboxContainer input:checked ~ .checkmark {
