--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -34,6 +34,11 @@
   width: 100%;
 }
 
+.categoryContainer h2 {
+  padding-left: 5px;
+  margin-top: 4px;
+}
+
 .statisticsContainer {
   display: flex;
   flex-direction: column;
@@ -57,11 +62,39 @@
   display: flex;
   align-items: center;
   height: 30px;
-  padding-left: 4px;
+  padding: 0 5px;
 }
 
 .items .item:nth-child(odd) {
   background-color: var(--gb-dm-bg2);
+}
+
+.itemDetails {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.itemValues {
+  display: flex;
+  flex-direction: row;
+  column-gap: 10px;
+}
+
+.itemValues div {
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-size: 14px;
+}
+
+.itemValues div:first-child {
+  color: var(--gb-dm-light-green);
+}
+
+.itemValues div:nth-child(2) {
+  color: var(--gb-dm-light-yellow);
 }
 
 .itemControl {
@@ -73,8 +106,12 @@
   flex-direction: column;
 }
 
-.total {
-  font-weight: bold;
+.totalWeight {
+  color: var(--gb-dm-light-green);
+}
+
+.totalVolume {
+  color: var(--gb-dm-light-yellow);
 }
 
 .selectControl {
@@ -91,6 +128,7 @@
 }
 
 .itemCheckboxContainer {
+  width: 100%;
   display: block;
   position: relative;
   padding-left: 35px;
